[package]
name = "hermes-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) integration for Hermes Agent"

[dependencies]
hermes-core = { workspace = true }
hermes-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }