[package]
name = "hermes-parity-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python↔Rust parity fixtures and harness for Hermes Agent"

[dependencies]
hermes-core = { workspace = true }
hermes-intelligence = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
hermes-acp = { workspace = true }
hermes-cli = { workspace = true }
hermes-gateway = { workspace = true }
hermes-mcp = { workspace = true }
hermes-tools = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
