[package]
name = "hermes-source-parity-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Source and governance parity contracts for Hermes Agent"
publish = false

[dev-dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
