[package]
name = "hermes-talk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Real-time voice dialog engine (ASR + LLM + TTS) for Hermes"

[features]
default = []
rockchip = []
sherpa-cuda = ["sherpa-onnx/cuda"]
sherpa-directml = ["sherpa-onnx/directml"]
sherpa-coreml = ["sherpa-onnx/coreml"]

[dependencies]
hermes-config = { workspace = true }
hermes-core = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cpal = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
pinyin = { workspace = true }
sherpa-onnx = { workspace = true, default-features = false, features = ["static"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
webrtc-vad = { workspace = true }
aec-rs = { workspace = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
