[package]
name = "hermes-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Telemetry primitives for Hermes (logging, metrics, reporting)"

[features]
default = []
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
opentelemetry = { version = "0.31", default-features = false, features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "http-proto"], optional = true }
tracing-opentelemetry = { version = "0.32", default-features = false, optional = true }
