[package]
name = "hermes-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool registry, toolsets, and tool implementations for Hermes Agent"

[dependencies]
hermes-core = { workspace = true }
hermes-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
rusqlite = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
serde_yaml = { workspace = true }
rand = "0.8"

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
hermes-config = { workspace = true, features = ["test-helpers"] }
