[package]
name = "hermes-verticals"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Vertical definitions and persona loading for Terra"

[dependencies]
hermes-tasks = { workspace = true }
hermes-billing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
